# bufstack

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  api_info_yaml  bufstack.cabal  bufstack.py  bufstack.vim  helgrind.stderr  helgrind.stdout  requirements.txt
autoload/: Bufstack.vim  bufstack.vim
autoload/mappings/: Bufstack.vim
cmake/: clang_libstdcpp_hack.cmake  default_build_type.cmake  depends_gtest.cmake  depends_msgpack.cmake  depends_rpclib.cmake  depends_spdlog.cmake  process_warnings.cmake
doc/: api_info_yaml.odt  check_output  old_rplugin.vim  reorganize_bufstack_make_check_out
include/: AbstractMsgpackClient.hpp  ApiParser.hpp  AsyncBufSender.hpp  BufSender.hpp  Buffer.hpp  Client.hpp  ClientConnection.hpp  CommonDefines.hpp  Config.hpp  Connect.hpp  Connectible.hpp  ConnectionInfo.hpp  FindNeovim.hpp  HasFd.hpp  HasTcpConnection.hpp  Interruptible.hpp  InterruptibleTask.hpp  Loggable.hpp  MsgpackClient.hpp  MsgpackFdReader.hpp  MsgpackReaderUnpacker.hpp  MsgpackReceiver.hpp  MsgpackRpc.hpp  NamespaceDefines.hpp  NewExceptionType.hpp  NvimClient.hpp  OnConnect.hpp  PrintableObject.hpp  Resumable.hpp  ResumableTask.hpp  Server.hpp  ServerConnection.hpp  ServerSocketConnection.hpp  SingleConnection.hpp  SingleConnectionServer.hpp  SocketException.hpp  SyncBufSender.hpp  TcpSocket.hpp  Util.hpp
include/NvimApi/: ApiInfo_decl.hpp  ApiParser.hpp  Client_decl.hpp  CustomType.hpp  NvimFunction.hpp  NvimType.hpp  RemoteFunction.hpp  RemoteFunction_decl.hpp
include/Util/: AtomicAccess.hpp  AtomicSequence.hpp  CloseLogError.hpp  FdWrapper.hpp  FileUtil.hpp  MsgpackUtil.hpp  OptionalStreamInstance.hpp  PrintOptional.hpp  PrintableObject.hpp  SplitString.hpp  Strcat.hpp  Util.hpp
plugin/: Bufstack.vim  bufstack.py  bufstack.vim
python/: Bufstack.py  BufstackPlugin.py  BufstackTests.py  eprint.py
rplugin/python3/: Bufstack.py  BufstackPlugin.py
scripts/: inspect_ast.py
src/: AbstractMsgpackClient.cpp  ApiParser.cpp  AsyncBufSender.cpp  AsyncWriteServer.cpp  BufSender.cpp  CMakeLists.txt  Client.cpp  ClientConnection.cpp  ClientEmbeddedConnection.cpp  ClientTcpConnection.cpp  ClientUnixConnection.cpp  Config.cpp  Connect.cpp  ConnectionInfo.cpp  FindNeovim.cpp  HasTcpConnection.cpp  Interruptible.cpp  InterruptibleTask.cpp  MsgpackClient.cpp  MsgpackFdReader.cpp  MsgpackReaderUnpacker.cpp  MsgpackReceiver.cpp  MsgpackRpc.cpp  MsgpackServer.cpp  MsgpackServerClient.cpp  MsgpackUtil.cpp  NvimClient.cpp  PrintableObject.cpp  ResumableTask.cpp  Server.cpp  ServerSocketConnection.cpp  SingleConnection.cpp  SingleConnectionServer.cpp  TcpSocket.cpp  Util_StringTrim.cpp  Util_hash_combine.cpp  main.c
src/Bufstack/: BufferOperations.hs  Core.hs  Error.hs  Init.hs  Util.hs
src/Bufstack/Class/: Closeable.hs  HasNumber.hs  IsValid.hs
src/Bufstack/Config/: Default.hs  Type.hs
src/Bufstack/Vim/: Autocmds.hs  Exports.hs
src/NvimApi/: ApiParser.cpp  CMakeLists.txt  CustomType.cpp  NvimFunction.cpp  RemoteFunction.cpp
src/exe/: CMakeLists.txt  StandaloneExe.hs
test/: CMakeLists.txt  TestMain.hs  test_bufstack.py  test_common.py
test/Bufstack/Test/: BasicTests.hs  Entry.hs
test/Bufstack/Test/Vim/: EmbeddedTest.hs  Framework.hs  Util.hs  Utils.hs
test/include/: MockMsgpackClient.hpp  MockMsgpackReaderUnpacker.hpp  MockNvimClient.hpp  MockServer.hpp  MsgpackTestObject.hpp  NvimConnectionTest.hpp  PipeTest.hpp  SyncBufSender.hpp  TestConfig.hpp
test/src/: AsyncWriteServerTests.cpp  BufSenderTests.cpp  CMakeLists.txt  LaunchNeovimUnix.cpp  MsgpackClientTests.cpp  MsgpackFdReaderTests.cpp  MsgpackRpclibTests.cpp  NvimConnectionTest.cpp  PipeTest.cpp  PipeWriteTests.cpp  ReadApiInfoTests.cpp  RemoteFunctionTests.cpp  ServerReadTests.cpp  ServerWriteTests.cpp  TestConfig.cpp  Util_TestSplitString.cpp
